k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
  namespace: duckhue01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: 633674601707.dkr.ecr.ap-southeast-1.amazonaws.com/duckhue01:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
